# dns-aws-python-tf-csv

./: .checkov.yml  .coverage  .gitignore  .terraform.lock.hcl  .tfsec.yml  GPG-KEY.txt  README.md  main.tf  parse_dns_csvs.py  pyproject.toml  pyproject_clean.toml  requirements.txt  sonar-project.properties  test-requirements.txt  tfsec-report.sarif  variables.tf
.github/workflows/: ci.yml  safety.yml
records/: a_alias_records.csv  a_records.csv  aaaa_records.csv  caa_records.csv  cert_records.csv  cname_records.csv  dmarc_records.csv  https_records.csv  loc_records.csv  mx_records.csv  naptr_records.csv  ns_records.csv  populate_dns_csvs.ps1  ptr_records.csv  soa_records.csv  spf_records.csv  srv_records.csv  sshfp_records.csv  svcb_records.csv  tlsa_records.csv  txt_records.csv  uri_records.csv
test/: test_parse_dns_csvs.py
